<resources>
    <string name="app_name">FIND MY RHYTHM</string>
    <string name="facebook_app_id">134346024586492</string>
    <string name="fb_login_protocol_scheme">fb134346024586492</string>
    <string name="email">maria.lopez@mail.com</string>
    <string name="descripPlaya">Sonidos eclécticos de vanguardia y música en directo en una discoteca y sala de conciertos abierta en 1957.</string>
    <string name="dirPlaya">Discoteca Playa Club Andén de Riazor, S/n, 15011 A Coruña</string>
    <string name="example_description">Suecia es un grupo de Indie Rock con toques Shoegaze originario de la ciudad de Murcia (España) y formado en 2013.</string>
    <string name="date_example">20/08/2020</string>
    <string name="hour_example">10:30</string>
    <string name="capacity_example">150</string>
    <string name="price_example">20€</string>
    <string name="search_events_usage_info">Haz click en los marcadores para ver el título del evento, y en este si quieres ver toda su información.</string>
    <string name="search">Buscar…</string>
    <string name="event_on_map_usage_info">Haz click en el marcador para acceder a las opciones de Google Maps.</string>
    <string name="cover_fields">Por favor, cubre todos los campos antes de continuar.</string>
    <string name="create_event">Crear evento</string>
    <string name="edit_event">Editar evento</string>
    <string name="change_poster">Cambiar cartel</string>
    <string name="save_edited_event">MODIFICAR</string>
    <string name="description">Descripción</string>
    <string name="event_description">Dirección del evento</string>
    <string name="category">Categoría</string>
    <string name="eventPhoto">Cartel del evento</string>
    <string name="addPhoto">Añadir foto</string>
    <string name="explore_map">Explorar en el mapa</string>
    <string name="date_pattern">dd/MM/yy</string>
    <string name="hour_pattern">HH:mm</string>
    <string name="toast_fill">Por favor, rellene todos los campos.</string>
    <string name="toast_eventDate">Por favor, seleccione una fecha actual o posterior.</string>
    <string name="change_pic_mssg">¿Desea quitar la imagen seleccionada?</string>
    <string name="hour1">0:0</string>
    <string name="hour2">0:</string>
    <string name="hour3">:0</string>
    <string name="hour4">:</string>
    <string name="toast_created">¡Concierto creado con éxito!</string>
    <string name="toast_modified">¡Concierto modificado con éxito!</string>
    <string name="mapa">¡Concierto modificado con éxito!</string>
    <string name="signed_up">Apuntado</string>
    <string name="to_sign_up">Apuntarse</string>
    <string name="information">Información</string>
    <string name="edit">Editar</string>
    <string name="people">personas</string>
    <string name="org">organizer</string>
    <string name="notificacion">ha creado un evento que
        te puede interesar!</string>
    <string name="summary">Evento Recomendado</string>
    <string name="summary_title">Resumen</string>
    <string name="summary_text"> - Evento de </string>
    <string name="titleLogin">Login</string>
    <string name="continue_with_google">Continuar con Google</string>
    <string name="continue_with_facebook">Continuar con Facebook</string>
    <string name="authFail">Autenticación fallada</string>
    <string name="authExi">Autenticación exitosa</string>
    <string name="select">Selecciona tu cuenta</string>
    <string name="usuario_log">Usuario</string>
    <string name="organicer_log">Organizador</string>
    <string name="account_exist">Cuenta existente</string>
    <string name="account_previous">Se ha detectado una cuenta previa de\u0020</string>
    <string name="account_use"> , ¿la quieres utilizar?</string>
    <string name="account_create">Crear cuenta de\u0020 </string>
    <string name="two_accounts"> Se han detectado dos cuentas previas: una de usuario y otra de organizador, ¿cuál quieres utilizar?
</string>
    <string name="rate_btn">Valorar</string>
    <string name="rated_btn">Editar valoración</string>
    <string name="ratings_tab">VALORACIONES</string>
    <string name="rated_value">Puntuación:</string>
    <string name="comment">Comentario:</string>
    <string name="add_comment">Introduzca comentario</string>
    <string name="usr">user</string>
    <string name="tag_alert">tagAlerta</string>
    <string name="existing_id">Tried to insert an existing id</string>
    <string name="info_organizer">Información del evento</string>
    <string name="email_format">Formato de email inválido</string>
    <string name="map_exlore">Explorar en el mapa</string>
    <string name="organizer_settings">Ajustes</string>
    <string name="recommended">Recomendados</string>
    <string name="spinner">Estamos buscando los mejores eventos para ti…</string>
    <string name="spinnerEvento">Creando evento…</string>
    <string name="edit_valoration">Editar valoración del evento </string>
    <string name="valoration_success">Evento valorado con éxito</string>
    <string name="valoration_event">Valorar evento</string>
    <string name="profile_user">Perfil</string>
    <string name="add_local_name">Introducir nombre del local</string>
    <string name="add_user_name">Introducir nombre de usuario</string>
    <string name="add_email">Introducir email</string>
    <string name="add_local_biography">Introducir biografía</string>
    <string name="add_location">Introducir localización</string>
    <string name="add_name">Introducir nombre completo</string>
    <string name="add_birthdate">Introducir fecha de nacimiento</string>
    <string name="add_genres">Géneros</string>
    <string name="add_locations">Localizaciones</string>
    <string name="toast_gps">GET THE LOCATION OF THE USER WITH GPS. ASK IF GPS IS NOT ACTIVATED</string>
    <string name="navigation_drawer_open">Abriendo menú</string>
    <string name="navigation_drawer_close">Cerrando menú</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_recommended">Recomendados</string>
    <string name="menu_search">Buscador</string>
    <string name="menu_notifications">Notificaciones</string>
    <string name="menu_settings">Ajustes</string>
    <string name="menu_logout">Cerrar sesión</string>
    <string name="title_activity_search">Map</string>
    <string name="ask_logout">¿Seguro que quieres cerrar sesión?</string>
    <string name="menu_option">Opción del menú no implementada!!</string>
    <string name="page">1</string>
    <string name="total_page">/3</string>
    <string name="next">Siguiente</string>
    <string name="back">Atrás</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="name">Nombre</string>
    <string name="nombre">Nombre</string>
    <string name="username">Nombre de usuario</string>
    <string name="email2">Correo</string>
    <string name="biography">Biografía</string>
    <string name="direccion">Dirección</string>
    <string name="fecha">Fecha</string>
    <string name="birthdate">Fecha de nacimiento</string>
    <string name="notifications">Notificaciones</string>
    <string name="save">Guardar</string>
    <string name="settings">Ajustes</string>
    <string name="action_settings">Settings</string>
    <string name="guardar">Sus ajustes han sido guardados con éxito</string>
    <string name="desnoti">Notificaciones desactivadas</string>
    <string name="noti">Notificaciones activadas</string>
    <string name="title_activity_ajustes_organizador">Ajustes_organizador</string>
    <string name="title_activity_ajustes_usuario">Ajustes_usuario</string>
    <string name="title_activity_event_location">Ubicación del evento</string>
    <string name="location">Localización de la organización</string>
    <string name="title_activity_perfil_usuario">Perfil_usuario</string>
    <string name="title_activity_perfil_usuario_tabs">PerfilUsuarioTabs</string>
    <string name="nombre_del_evento">Nombre del evento</string>
    <string name="dia">Día</string>
    <string name="hora">Hora</string>
    <string name="asistentes_max">Asistentes máximos</string>
    <string name="precio">Precio</string>
    <string name="euro">€</string>
    <string name="crear">Crear</string>
    <string name="submit">Aceptar</string>
    <string name="recomendados_para_ti">Recomendados para ti</string>
    <string name="notiCreationEve">Evento creado con éxito</string>
    <string name="genresSettings">Géneros seleccionados</string>
    <string name="locationsSettings">Ubicaciones seleccionadas</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Los permisos de ubicación son necesarios.</string>
    <string name="genresListID">SubscribedGenres</string>
    <string name="locationsListID">SubscribedLocations</string>
    <string name="intro1">Bienvenid@ a</string>
    <string name="intro2">FIND MY RHYTHM</string>
    <string name="intro_login">Elige tu perfil:</string>
    <string name="organizador">Organización</string>
    <string name="organizador_text">Podrás buscar eventos, crearlos y ser valorado.</string>
    <string name="user">Usuario</string>
    <string name="usuario_text">Podrás buscar eventos, asistir a ellos y acceder a un muro de comentarios con otros usuarios.</string>
    <string name="location1">Selecciona tus</string>
    <string name="location2">ubicaciones favoritas</string>
    <string name="user_location">Ubicación</string>
    <string name="selfLocation">Ubicación actual</string>
    <string name="notprofile">Tal vez más tarde</string>
    <string name="genres">Selecciona tus estilos musicales favoritos</string>
    <string name="genres1">Selecciona tus estilos</string>
    <string name="genres2">musicales favoritos</string>
    <string name="pop">Pop</string>
    <string name="rock">Rock</string>
    <string name="hiphop">Hip-hop</string>
    <string name="latin">Latina</string>
    <string name="dance">Dance</string>
    <string name="indie">Indie</string>
    <string name="classic">Clásica</string>
    <string name="reggae">Reggae</string>
    <string name="trap">Trap</string>
    <string name="log1">Ya queda poco…</string>
    <string name="log2">Cuéntanos más sobre ti</string>
    <string name="localName">Nombre del local</string>
    <string name="email1">Correo</string>
    <string name="orglocation">Localización de la organización</string>
    <string name="notiCreation">Perfil creado con éxito</string>
    <string name="join_event_btn">Apuntarse</string>
    <string name="joined_event_btn">Perfil creado con éxito</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_search_events">Search Events</string>
    <string name="title_activity_search_organizer_location">Choose your location</string>
    <string name="eula_title">End-User License Agreement (EULA) of Findmyrhythm</string>
</resources>