<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0d1117"
    tools:context=".View.AjustesUsuario">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:background="#00000000"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="383dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ajustes_icono" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/settings"
                android:textColor="#f2cee6"
                android:textSize="26sp" />

            <Button
                android:id="@+id/button"
                android:layout_width="89dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/save" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/lightgray"
            android:text="@string/name"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/lightgray"
            android:text="Juan"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/lightgray"
            android:text="@string/username"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:textColor="@color/lightgray"
            android:inputType="textPersonName"
            android:text="j.gomez.95"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/lightgray"
            android:text="@string/email2"
            android:textSize="12sp"/>

        <EditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/lightgray"
            android:text="j.gomez@udc.es"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/lightgray"
            android:text="@string/biography"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Me encanta la música y pasarlo bien"
            android:textColor="@color/lightgray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/lightgray"
            android:text="@string/birthdate"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:textColor="@color/lightgray"
            android:inputType="textPersonName"
            android:text="12/04/1995"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/switch1"
                android:textColor="@color/lightgray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/notifications" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:orientation="horizontal">

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>