<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/AppTheme.NoActionBar"
    android:background="@color/black"
    tools:context=".View.GreetingsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/concert_purple">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.4">

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerHorizontal="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/intro1"
                        android:textColor="@color/white"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textSize="40sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/intro2"
                        android:textColor="@color/white"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textSize="40sp"
                        android:textStyle="bold|italic"
                        android:fontFamily="sans-serif-condensed"/>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intro_login"
                android:textColor="@color/rose"
                android:textSize="22sp"
                android:textStyle="italic"
                android:layout_marginStart="30dp"/>

            <Button
                android:id="@+id/orgLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@color/purple"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/organizador"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/organizador_text"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/userLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="#296CAE"
                android:text="@string/user"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/usuario_text"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:layout_marginHorizontal="10dp"/>



        </LinearLayout>



    </RelativeLayout>



</LinearLayout>