<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/primaryBackgroundDark"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="start"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="8dp"
        android:paddingEnd="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageEvent"
                    android:layout_width="155dp"
                    android:layout_height="110dp"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <Button
                    android:id="@+id/editBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@color/primaryBackgroundDark"
                    android:clickable="false"
                    android:text="@string/edit"
                    android:textColor="@color/white" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pop"
                    android:textColor="#707070"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/eventName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="15dp"
                    android:text="@string/nombre_del_evento"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    />


            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/eventLocation"
                android:layout_width="192dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/direccion"
                android:textSize="15sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/primaryBackgroundDarker" />

            <TextView
                android:id="@+id/eventLocationContent"
                android:layout_width="318dp"
                android:layout_height="44dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/dirPlaya"
                android:textSize="15sp" />

        </LinearLayout>
        <TextView
            android:id="@+id/eventDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:text="@string/information"
            android:textSize="15sp"
            android:textStyle="bold" />
        <View
            android:id="@+id/divider6"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/primaryBackgroundDarker" />
        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="3sp"
            android:paddingEnd="3sp">



            <TextView
                android:id="@+id/eventDescContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/example_description"
                android:textSize="15sp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp">

                <ImageView
                    android:id="@+id/capacityIcon"
                    android:layout_margin="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_people_white_18dp" />

                <TextView
                    android:id="@+id/eventCapacity"
                    android:layout_marginStart="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/capacity_example"
                    android:textColor="#707070"
                    android:textSize="18sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp">

                <ImageView
                    android:id="@+id/costIcon"
                    android:layout_margin="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_euro_symbol_white_18dp" />

                <TextView
                    android:id="@+id/eventCost"
                    android:layout_width="328dp"
                    android:layout_marginStart="6dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/price_example"
                    android:textColor="#707070"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_margin="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_access_time_white_18dp" />

                <TextView
                    android:id="@+id/eventTime"
                    android:layout_marginStart="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hour_example"
                    android:textColor="#707070"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp">

                <ImageView
                    android:id="@+id/calendar"
                    android:layout_margin="4dp"
                    android:src="@drawable/ic_calendar_today_white_18dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/eventDate"
                    android:layout_marginStart="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date_example"
                    android:textColor="#707070"
                    android:textSize="18sp" />
            </TableRow>

        </LinearLayout>
        </ScrollView>



    </LinearLayout>

</LinearLayout>